modified:   "_posts/2017-02-06-\345\277\253\351\200\237\346\220\255\345\273\272\344\270\252\344\272\272\345\215\232\345\256\242.md"

--- a/_posts/2017-02-06-快速搭建个人博客.md
+++ b/_posts/2017-02-06-快速搭建个人博客.md
@@ -10,6 +10,7 @@ tags:
     - Blog
 ---
 
+>> 本页面引用自[http://qiubaiying.top/](by大侠)
 > 正所谓前人栽树，后人乘凉。
 > 
 > 感谢[Huxpro](https://github.com/huxpro)提供的博客模板
