--- a/_posts/2019-03-11-如果哪天你依然还在那里.md
+++ b/_posts/2019-03-11-如果哪天你依然还在那里.md
@@ -1,3 +1,20 @@
+---
+layout:     	post   				    # 使用的布局（不需要改）
+title:      	如果哪天你依然还在那里				# 标题 
+subtitle:   	生活中有许多事，我们必须放在心里					#副标题
+date:       	2019-03-11 				# 时间
+author:     	Shadownfw2ind   			# 作者
+header-img: 	img/post-bg-2019.jpg 	#这篇文章标题背景图片
+catalog: 		true 						# 是否归档
+tags:										#标签
+    - 生活
+    - 笔记
+    - 点滴
+---
+[^_^]: # (以上是Jekyll特有的格式，从以下内容开始--【此处是注释】)
+
+
+
 # 如果哪天你依然还在那里
 ##  生活中有许多事，我们必须放在心里
 
