--- a/_posts/2019-03-11-如果哪天你依然还在那里.md
+++ b/_posts/2019-03-11-如果哪天你依然还在那里.md
@@ -4,7 +4,7 @@ title:      	如果哪天你依然还在那里				# 标题
 subtitle:   	生活中有许多事，我们必须放在心里					#副标题
 date:       	2019-03-11 				# 时间
 author:     	Shadownfw2ind   			# 作者
-header-img: 	img/post-bg-2019.jpg 	#这篇文章标题背景图片
+header-img: 	img/post-bg-hack.jpg 	#这篇文章标题背景图片
 catalog: 		true 						# 是否归档
 tags:										#标签
     - 生活
