modified:   "_posts/2019-03-12-\346\224\266\351\233\206\344\270\200\344\272\233\345\244\247\344\275\254\347\232\204blog.md"

--- a/_posts/2019-03-12-收集一些大佬的blog.md
+++ b/_posts/2019-03-12-收集一些大佬的blog.md
@@ -28,5 +28,9 @@ tags:										#标签
 *	余弦/evilcos
 	-	[blog](https://evilcos.me/)
 	- 	[XSS工具,编码转换](https://xssor.io)
-
-
+*	小子
+	-	[blog](https://type.so/about.html)
+	- 	[在线工具: https://tool.lu](在线工具: https://tool.lu)
+*	CF_HB
+ 	-	[blog](http://www.coffeehb.cn/?id=2)
+ 	
