modified:   "_posts/2019-03-27-AWK\345\267\245\345\205\267\345\260\217\346\212\200\345\267\247.md" 	deleted:    img/awk-nmap-1.png 	new file:   img/awk-sqlmap-1.jpg

--- a/_posts/2019-03-27-AWK工具小技巧.md
+++ b/_posts/2019-03-27-AWK工具小技巧.md
@@ -19,4 +19,4 @@ tags:										#标签
 
 `awk 'BEGIN{line=-10}{if(/tamper\(\047/){print FILENAME"\n"$0;line=NR};if(NR==line+1){print $0"\n"}}' /usr/share/sqlmap/tamper/*.py`
 用于学习，收集sqlmap中tamper模块的用法，更方便手工注入学习。
-![](img/awk-nmap-1.png)
+![](img/awk-sqlmap-1.jpg)
