--- a/_posts/2021-01-17 专注逆向 深入知识 增涨技能.md
+++ b/_posts/2021-01-17 专注逆向 深入知识 增涨技能.md
@@ -20,3 +20,5 @@ tags:										#标签
 但这半年多也没有系统的去学习某一个方面的知识，都是边用边学，学了也用，遇到最大的困难是大厂的app或者关键信息在so层的，我对这一块知识面还不够，所以2021年重点的技能方向是二进制的逆向。
 
 不要盲目的忙，要学会高效。
+
+这半年感觉有点辛苦，但得到的也是十年来少有的。感叹，早进入这一个圈子多好。
