--- a/_posts/2021-01-17-专注逆向 深入知识 增涨技能.md
+++ b/_posts/2021-01-17-专注逆向 深入知识 增涨技能.md
@@ -1,6 +1,6 @@
 ---
 layout:     	post   				    # 使用的布局（不需要改）
-title:      	2021-01-17 专注逆向 深入知识 增涨技能  				# 标题 
+title:      	专注逆向 深入知识 增涨技能  				# 标题 
 subtitle:   	2020年是不平凡的一年 它带我进入了我喜欢的世界 					#副标题
 date:       	2021-01-17 				# 时间
 author:     	Shadownfw2ind   			# 作者
